Fix some z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ strong {
     transition: opacity .5s ease;
     white-space: nowrap;
     pointer-events: none;
+    z-index: 20;
 }
 
 .tooltip::after {
@@ -123,11 +124,11 @@ strong {
 @media all and (min-width: 480px) {
   .part li a:hover .tooltip {
       opacity: 1;
-      z-index: 10;
   }
 
   .part li a:focus .tooltip {
       opacity: 0.7;
+      z-index: 10;
   }
 
   .part li a:hover img,
